feat: Remove emoji from welcome title for a cleaner presentation

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -1,6 +1,6 @@
 {
   "welcome": {
-    "title": "Welcome to blossomOS! 🌸",
+    "title": "Welcome to blossomOS!",
     "description": "Pick your language and keyboard to get started with the installation."
   },
   "language": {
